git-cheatsheet/1200.css
/* Containers
----------------------------------------------------------------------------------------------------*/
.container_16 {
	margin-left: 20px;
	margin-right: auto;
	min-width: 1200px;
  width: 100%;
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  justify-content: flex-start;
  align-items: flex-start;
}

/* Grid >> Children (Alpha ~ First, Omega ~ Last)
----------------------------------------------------------------------------------------------------*/

.alpha {
	margin-left: 0 !important;
}

.omega {
	margin-right: 0 !important;
}



/* Grid >> Global
----------------------------------------------------------------------------------------------------*/

.grid_1,
.grid_2,
.grid_3,
.grid_4,
.grid_5,
.grid_6,
.grid_7,
.grid_8,
.grid_9,
.grid_10,
.grid_11,
.grid_12,
.grid_13,
.grid_14,
.grid_15,
.grid_16{
	display:block;
	position: relative;
	margin-left: 10.0px;
	margin-right: 10.0px;
}


/* Grid >> 2 Columns
----------------------------------------------------------------------------------------------------*/

.container_16 .grid_1{
  flex-grow: 1;
  /*width: 8vh;*/
	/*min-width:55px;*/
}

.container_16 .grid_2{
  flex-grow: 2;
  /*width: 16vh;*/
  /*min-width:130px;*/
}

.container_16 .grid_3{
  flex-grow: 3;
  /*width: 24vh;*/
  /*min-width:205px;*/
}

.container_16 .grid_4{
  flex-grow: 4;
  /*width: 32vh;*/
  /*min-width:280px;*/
}

.container_16 .grid_5{
  flex-grow: 5;
  /*width: 40vh;*/
  /*min-width:355px;*/
}

.container_16 .grid_6{
  flex-grow: 6;
  /*width: 48vh;*/
  /*min-width:430px;*/
}

.container_16 .grid_7{
  flex-grow: 7;
  /*width: 56vh;*/
  /*min-width:505px;*/
}

.container_16 .grid_8{
  flex-grow: 8;
  /*width: 64vh;*/
  /*min-width:580px;*/
}

.container_16 .grid_9{
  min-width:655px;
}

.container_16 .grid_10{
  min-width:730px;
}

.container_16 .grid_11{
  min-width:805px;
}

.container_16 .grid_12{
  min-width:880px;
}

.container_16 .grid_13{
  min-width:955px;
}

.container_16 .grid_14{
  min-width:1030px;
}

.container_16 .grid_15{
  min-width:1105px;
}

.container_16 .grid_16{
  min-width:1180px;
}


/* Clear Floated Elements
----------------------------------------------------------------------------------------------------*/


.clear {
	clear: both;
	display: block;
	overflow: hidden;
	visibility: hidden;
	width: 0;
	height: 0;
}

